# comma-tools

./: .coverage  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_DIARY.md  CHANGELOG.md  Dockerfile  README.md  README_CTS_LITE.md  coverage.xml  cruise_control_analyzer.py  find_openpilot_deps.py  fingerprint.sh  hybrid_rx_trace.py  log-monitor.sh  pyproject.toml  pytest.ini  simple-panda.py  test-car.sh  test-ci-trigger.md  test_cts_lite.py  test_mcp_workflow.py  verbose-logs.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature_v1_1.md
.github/copilot-comments/: pr-78.md
.github/scripts/: test-container-vendor.py
.github/workflows/: black-autoformat.yml  container.yml  docs.yml  test.yml
deployment/docker/: .dockerignore  Dockerfile  docker-compose.yml
deployment/nginx/: cts-lite.conf
deployment/scripts/: health-check.sh  install.sh  start.sh  stop.sh
deployment/systemd/: cts-lite.env  cts-lite.service
docker/: startup.py
docs/: AGENTS.md  API_REFERENCE.md  ARCHITECTURE_PLAN.md  CONTAINER.md  COPILOT_FEEDBACK_RESPONSE.md  CTS_LITE_README.md  DEPLOYMENT.md  DEVELOPMENT.md  MIGRATION_GUIDE.md  MVP_DEFINITION.md  Makefile  PHASE_1_IMPLEMENTATION_GUIDE.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHASE_2_PLANNING_SUMMARY.md  PHASE_3_IMPLEMENTATION_GUIDE.md  PHASE_4A_ERROR_HANDLING.md  PHASE_4B_COMPLETION_SUMMARY.md  PHASE_4B_CONFIG_MONITORING.md  PHASE_4C_TESTING_QA.md  PHASE_4D_DEPLOYMENT_DOCS.md  PHASE_4_BREAKDOWN_SUMMARY.md  PHASE_4_IMPLEMENTATION_GUIDE.md  PHONE_A_FRIEND_MCP_PLAN.md  PR52_REVIEW_RESPONSE.md  README.md  api_reference.rst  conf.py  getting_started.rst  index.rst  knowledge_base.rst  phase4b_monitoring_followup.md
docs/_build/html/: .buildinfo  AGENTS.html  api_reference.html  examples.html  genindex.html  getting_started.html  index.html  knowledge_base.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_static/: README.md
docs/knowledge/: schemas.md
examples/sample_reports/: README.md  analysis_report.html  candidates.analysis_meta.json  candidates.csv  candidates.json  config_snapshot.json  counts_by_segment.analysis_meta.json  counts_by_segment.csv  counts_by_segment.json  edges.analysis_meta.json  edges.csv  engaged_intervals.analysis_meta.json  engaged_intervals.csv  runs.analysis_meta.json  runs.csv  runs.json  timeline.analysis_meta.json  timeline.csv  timeline.json
knowledge/: README.md  can-analysis-tools.md  diagram_creation_best_practices.md  test-ci-exclusion.md
knowledge/openpilot/: architecture.md  control_allowed.md
scripts/: simple-cabana.sh
src/comma_tools/: __init__.py
src/comma_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/comma_tools/analyzers/: __init__.py  rlog_to_csv.py  (+4 more)
src/comma_tools_mcp/: README.md  __init__.py  server.py
src/cts_cli/: __init__.py  config.py  http.py  main.py  render.py  sse.py  ws.py
src/cts_lite/: __init__.py  config.py  db.py  main.py  models.py  registry.py  runner.py  storage.py
src/phone_a_friend_mcp/: README.md  __init__.py  config.py  rate_limiter.py  server.py  session.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_artifacts.py  test_capabilities.py  test_capabilities_regression.py  test_config_monitoring.py  test_config_recursion.py  test_downloads.py  test_error_handling.py  test_execution.py  test_health.py  test_logs.py  test_phase3_integration.py  test_production_scenarios.py  test_registry.py  test_runs.py  test_runs_integration.py  test_version.py
tests/data/: known_good.rlog.zst
tests/integration/: __init__.py  test_analyzer_bootstrap.py  test_connect_cli.py  test_cts_cli_integration.py  test_mvp_acceptance.py  test_new_analyzers_cli.py  test_real_log_analyzer_api.py  test_real_log_analyzer_cli.py
tests/unit/: __init__.py  test_analyzer_logic.py  test_bit_analysis.py  test_can_bitwatch.py  test_can_decoder_enhancements.py  test_can_decoders.py  test_connect_auth.py  test_connect_resolver.py  test_cruise_control_analyzer.py  test_cts_cli.py  test_decoder_precision.py  test_plotting.py  test_rlog_to_csv.py
watchlists/: subaru_cxk.txt
(+72 files in other folders)
