[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comma-tools"
version = "0.1.0"
description = "Debugging and analysis tools for openpilot autonomous driving system"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Dan Mann", email = "dan.b.mann@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy", 
    "pycapnp",
    "tqdm",
    "zstandard",
    "pyzmq",
    "smbus2",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.5.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "matplotlib>=3.5.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-autodoc-typehints",
    "furo",
    "myst-parser",
]

[project.scripts]
cruise-control-analyzer = "comma_tools.analyzers.cruise_control_analyzer:main"
rlog-to-csv = "comma_tools.analyzers.rlog_to_csv:main"
can-bitwatch = "comma_tools.analyzers.can_bitwatch:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
