[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comma-tools"
version = "0.8.0"
description = "Debugging and analysis tools for openpilot autonomous driving system"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Dan Mann", email = "dan.b.mann@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy", 
    "pycapnp",
    "tqdm",
    "zstandard",
    "pyzmq",
    "smbus2",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.5.0",
]
connect = [
    "requests>=2.25.0",
]
client = [
    "httpx>=0.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "websockets>=11.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "httpx>=0.24.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "httpx>=0.24.0",
    "black",
    "flake8",
    "mypy",
    "matplotlib>=3.5.0",
    "requests>=2.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "websockets>=11.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
]
docs = [
    "sphinx>=4.0",
    "sphinx-autodoc-typehints",
    "furo",
    "myst-parser",
]

[project.scripts]
cruise-control-analyzer = "comma_tools.analyzers.cruise_control_analyzer:main"
rlog-to-csv = "comma_tools.analyzers.rlog_to_csv:main"
can-bitwatch = "comma_tools.analyzers.can_bitwatch:main"
comma-connect-dl = "comma_tools.sources.connect.cli:main"
cts = "cts_cli.main:cli_main"
cts-lite = "comma_tools.api.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
